# LibDNN

INCLUDE_DIRECTORIES( .)
FILE( GLOB SRC_FILES *.c *.C )
FILE( GLOB HDR_FILES DNN/*.h )
ADD_LIBRARY(libDNN ${SRC_FILES} ${HDR_FILES} )

IF(UNIX)
  SET_TARGET_PROPERTIES( libDNN PROPERTIES LINKER_LANGUAGE CXX )
  SET_TARGET_PROPERTIES( libDNN PROPERTIES OUTPUT_NAME DNN )
ENDIF(UNIX)

###########
# Install #
###########
SET(INSTALL_DIR_RAW ${CMAKE_INSTALL_PREFIX}/${CATKIN_GLOBAL_LIB_DESTINATION})
install(TARGETS libDNN
  ARCHIVE DESTINATION ${INSTALL_DIR_RAW}
  LIBRARY DESTINATION ${INSTALL_DIR_RAW}
  RUNTIME DESTINATION ${INSTALL_DIR_RAW}
)

