# libSampling 

INCLUDE_DIRECTORIES( ${mt_DIR}
		      ${Boost_INCLUDE_DIRS} 
		      ${CMAKE_CURRENT_SOURCE_DIR}/..
		      ${COIN_INCLUDE_DIR}
		     )
		     
LINK_DIRECTORIES( ${ann_DIR}
		   ${problem_DIR} )

FILE( GLOB SRC_FILES  *.cpp )
FILE( GLOB HDR_FILES  *.h )

ADD_DEFINITIONS( -DCOIN_DLL )

ADD_LIBRARY( libsampling STATIC ${SRC_FILES} ${HDR_FILES} ) 
TARGET_LINK_LIBRARIES( libsampling libDNN libproblem )

IF(UNIX)
 SET_TARGET_PROPERTIES( libsampling PROPERTIES OUTPUT_NAME sampling )
ENDIF(UNIX)

###########
# Install #
###########
SET(INSTALL_DIR_RAW ${CMAKE_INSTALL_PREFIX}/${CATKIN_GLOBAL_LIB_DESTINATION})
install(TARGETS libsampling
  ARCHIVE DESTINATION ${INSTALL_DIR_RAW}
  LIBRARY DESTINATION ${INSTALL_DIR_RAW}
  RUNTIME DESTINATION ${INSTALL_DIR_RAW}
)